MGS-2400 BUGFIX correct button size on mobile doc download button

--- a/src/scss/components/_component.document-info.scss
+++ b/src/scss/components/_component.document-info.scss
@@ -38,7 +38,7 @@ $document-info__large-button-size: 70px !default;
     width: 107px;
 
     &--main {
-      padding-bottom: $document-info__large-button-size;
+      padding-bottom: $document-info__button-size;
     }
 
     &--pdf {
